--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav__li"><a class="nav__link" href="#">Blog</a></li>
                 </ul>
             </nav>
-            <div>
+            <div class="header__button-container">
                 <button class="button button__orang">Get Started</button>
             </div>
         </div>
@@ -47,10 +47,10 @@
                 <button class="button button__transparent">Try</button>
              </div>
         </div>
-        <div><img src="./img/firstmen.png" alt="firstmen"></div>
+        <div class="img__container"><img src="./img/firstmen.png" alt="firstmen"></div>
     </section>
 <section class="container subscribe">
-    <div>
+    <div class="img__container">
         <img src="./img/secondmen.png" alt="secondman">
     </div>
     <div>
